add role middleware
